<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about_contact_us">Contact us</string>
    <string name="about_facebook">Like us on Facebook</string>
    <string name="about_github">Fork us on GitHub</string>
    <string name="about_instagram">Follow us on Instagram</string>
    <string name="about_page_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vehicula ligula tortor, in pellentesque dui congue ac. Vestibulum lacinia urna magna, quis cursus ante iaculis nec. Nunc ut ligula sit amet odio ultrices euismod vel vel purus. Sed lacus mauris, aliquam et placerat id</string>
    <string name="about_play_store">Rate us on the Play Store</string>
    <string name="about_twitter">Follow us on Twitter</string>
    <string name="about_website">Visit our website</string>
    <string name="about_youtube">Watch us on Youtube</string>
    <string name="activity_barcode_generator">Barcode Generator</string>
    <string name="activity_generate">QR-Code Generator</string>
    <string name="activity_history">History</string>
    <string name="activity_history_details">History</string>
    <string name="androidx_camera_default_config_provider">androidx.camera.camera2.Camera2Config$DefaultProvider</string>
    <string name="app_name">Docs Scan</string>
    <string name="app_version">null</string>
    <string name="btn_save">Save &amp; Share</string>
    <string name="card_barcode_hint">Create different kinds of Barcodes</string>
    <string name="card_barcode_title">Barcode</string>
    <string name="card_contact_hint">Create a QR-Code in the format of a VCard</string>
    <string name="card_contact_title">Contact</string>
    <string name="card_location_hint">Create a QR-Code from a geo location</string>
    <string name="card_location_title">Location</string>
    <string name="card_text_hint">Convert text into a QR-Code</string>
    <string name="card_text_title">Text</string>
    <string name="card_wifi_hint">Create a QR-Code of a wifi network</string>
    <string name="card_wifi_title">Wifi</string>
    <string name="cbHidden">Hidden</string>
    <string name="cbLatitude">north</string>
    <string name="cbLongtitude">east</string>
    <string name="chip_text">Chip text</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="default_text_main_activity">Press on the Scan Button to scan a QR-Code/Barcode</string>
    <string name="define_zxingandroidembedded" />
    <string name="delete_entry_history_cancel">No</string>
    <string name="delete_entry_history_confirmation">Yes</string>
    <string name="delete_entry_history_dialog_message">Do you want to delete this entry?</string>
    <string name="delete_history_dialog_cancel">Cancel</string>
    <string name="delete_history_dialog_confirmation">OK</string>
    <string name="delete_history_dialog_message">All entries will be deleted!</string>
    <string name="error_add_to_database">Was not able to add QR-Code to the history</string>
    <string name="error_canceled_scan">You canceled the scanning</string>
    <string name="error_code_not_found">Barcode/Qr-Code not found</string>
    <string name="error_file_not_found">File not found</string>
    <string name="error_fn_or_name_first">First type in a name or first name</string>
    <string name="error_generate">No valid input for this format</string>
    <string name="error_geo_first">First fill in valid values for the latitude and longitude</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_label">Error</string>
    <string name="error_not_in_database">Was not found in the history database</string>
    <string name="error_scan_first">Scan a QR-Code first</string>
    <string name="error_sqlexception">This format is not supported for the history feature</string>
    <string name="error_text_first">First type in some Text</string>
    <string name="hint_bday">birthday</string>
    <string name="hint_city">city</string>
    <string name="hint_country">country</string>
    <string name="hint_email">e-mail</string>
    <string name="hint_fn">first name</string>
    <string name="hint_latitude">latitude example: 43.73</string>
    <string name="hint_longtitude">longitude example: 10.73</string>
    <string name="hint_mobil">mobile</string>
    <string name="hint_name">name</string>
    <string name="hint_note">note</string>
    <string name="hint_org">organization</string>
    <string name="hint_password">Password</string>
    <string name="hint_photo">URL to photo</string>
    <string name="hint_plz">postcode</string>
    <string name="hint_ssid">SSID</string>
    <string name="hint_state">state</string>
    <string name="hint_street">street</string>
    <string name="hint_tele_private">telephone(private)</string>
    <string name="hint_tele_work">telephone(work)</string>
    <string name="hint_text2qr">Here you can enter some text</string>
    <string name="hint_web">website</string>
    <string name="notice_clipoard">Copied to Clipboard</string>
    <string name="notice_deleted_from_database">Deleted from the History</string>
    <string name="offline_notification_text">Tap to open ad</string>
    <string name="offline_notification_title">View the ad you saved when you were offline</string>
    <string name="offline_opt_in_confirm">OK</string>
    <string name="offline_opt_in_confirmation">You\'ll get a notification with the link when you\'re back online</string>
    <string name="offline_opt_in_decline">No thanks</string>
    <string name="offline_opt_in_message">We\'ll send you a notification with a link to the advertiser site.</string>
    <string name="offline_opt_in_title">Open ad when you\'re back online.</string>
    <string name="ok_label">OK</string>
    <string name="photo_saved">Photo has been saved to Camera</string>
    <string name="pref_header_history_settings">History</string>
    <string name="pref_header_scanner">Scanner</string>
    <string name="pref_header_search_engine_settings">Search Engine</string>
    <string name="pref_title_auto_clipboard">Smart clipboard</string>
    <string name="pref_title_auto_scan">Autostart scanner</string>
    <string name="pref_title_barcode_search_enigne">Barcode Search Engine</string>
    <string name="pref_title_camera">Camera</string>
    <string name="pref_title_day_night_mode">Day/Night mode (BETA Version)</string>
    <string name="pref_title_history">Storing history</string>
    <string name="pref_title_search_engine">Search Engine</string>
    <string name="reset_database">Reset</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_menu_title">Search</string>
    <string name="send_to">Share with:</string>
    <string name="settings_menu_about">About</string>
    <string name="settings_settings">Settings</string>
    <string name="share_database">Share</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="title_activity_barcode_generate">Barcode Generator</string>
    <string name="title_activity_geo_generator">Geo Generator</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_text_generator">Text Generator</string>
    <string name="title_activity_vcard_generator">VCard Generator</string>
    <string name="title_activity_wifi_generator">Wifi Generator</string>
    <string name="title_copy">Copy</string>
    <string name="title_createContact">Create Contact</string>
    <string name="title_delete">Delete</string>
    <string name="title_format">Code format:</string>
    <string name="title_generate">Generate</string>
    <string name="title_history">History</string>
    <string name="title_information">Code information:</string>
    <string name="title_openInWeb">Open in Web</string>
    <string name="title_reset">Reset</string>
    <string name="title_scan">Scan</string>
    <string name="title_share">Share</string>
    <string name="toast_erorr">Could not save the image!</string>
    <string name="toast_error_data_to_big">Too much information for a QR-Code</string>
    <string name="toast_permission_needed">Permission is needed</string>
    <string name="toast_save">Saved in SecScanQR folder on the internal storage</string>
    <string name="tv_encryption">Encryption:</string>
    <string name="tv_format">Format:</string>
    <string name="xzing_label">Activate the flashlight using the volume keys</string>
</resources>
