<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gen">

    <RelativeLayout
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:onClick="goBack"
            android:src="@drawable/ic_arrow"
            app:tint="#20335b" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="Generate QR Code"
            android:textColor="#20335b"
            android:textSize="22sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="@drawable/border_stroke"
        android:orientation="vertical"
        android:padding="8dp">

        <CheckBox
            android:id="@+id/cbLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="0"
            android:checked="true"
            android:onClick="onClickCheckboxes"
            android:text="@string/cbLatitude"
            android:textColor="?attr/textcolor" />

        <androidx.cardview.widget.CardView
            android:id="@+id/barcode_card"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10sp"
            android:background="@color/white"
            android:clickable="true"
            app:cardCornerRadius="20dp"
            app:cardElevation="0.5dp">

            <EditText
                android:id="@+id/tfLatitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="0"
                android:background="@android:color/transparent"
                android:hint="@string/hint_latitude"
                android:inputType="numberDecimal"
                android:textColor="?attr/textcolor" />
        </androidx.cardview.widget.CardView>

        <CheckBox
            android:id="@+id/cbLongtitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:checked="true"
            android:onClick="onClickCheckboxes"
            android:text="@string/cbLongtitude"
            android:textColor="?attr/textcolor" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10sp"
            android:clickable="true"
            app:cardCornerRadius="20dp"
            app:cardElevation="0.5dp">

            <EditText
                android:id="@+id/tfLongtitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="0"
                android:background="@android:color/transparent"
                android:hint="@string/hint_longtitude"
                android:inputType="numberDecimal"
                android:textColor="?attr/textcolor" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="0"
            android:text="@string/tv_format"
            android:textColor="?attr/textcolor" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="0"
            android:textColor="?attr/textcolor" />
    </LinearLayout>

    <Button
        android:id="@+id/btnGenerateGeo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/orange_grad"
        android:text="@string/title_generate"
        android:textColor="@android:color/white" />

    <FrameLayout
        android:id="@+id/nativeFrameGeo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
